--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ pulseaudio (0.9.13-1) UNRELEASED; urgency=low
     libbluetooth-dev
   * debian/pulseaudio.install: Install various new modules. Including bluetooth
     and polkit, which will move into a seperate package later.
+  * debian/pulseaudio.install: Install the new pulseaudio xdg autostart file
 
  -- Sjoerd Simons <sjoerd@debian.org>  Sun, 19 Oct 2008 16:38:44 +0100
 
