debian/control: add a depend on consolekit. Might be downgrade to a recommend later

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,8 +30,10 @@ pulseaudio (0.9.13-1) UNRELEASED; urgency=low
   * debian/pulseaudio.install: Install various new modules. Including bluetooth
     and polkit, which will move into a separate package later.
   * debian/pulseaudio.install: Install the new pulseaudio xdg autostart file
+  * debian/control: add a depend on consolekit. Might be downgrade to a
+    recommend later
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 19 Oct 2008 16:38:44 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 19 Oct 2008 17:43:49 +0100
 
 pulseaudio (0.9.10-3) unstable; urgency=low
 
