--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pulseaudio (0.9.13-2) UNRELEASED; urgency=low
+
+  * Rename libpulsecore5 to libpulsecore8 to correctly reflect the soname
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 16 Nov 2008 15:01:26 +0000
+
 pulseaudio (0.9.13-1) experimental; urgency=low
 
   [ Bas Zoetekouw ]
