--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pulseaudio (0.9.13-2) UNRELEASED; urgency=low
+pulseaudio (0.9.13-2) experimental; urgency=low
 
   * Rename libpulsecore5 to libpulsecore8 to correctly reflect the soname
     (Closes: #503612)
@@ -9,7 +9,7 @@ pulseaudio (0.9.13-2) UNRELEASED; urgency=low
   * 0005-Fix-two-typos-that-broke-tunnels.patch
     - Fix tunnels. From upstream git
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 16 Nov 2008 17:48:05 +0000
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 16 Nov 2008 18:13:05 +0000
 
 pulseaudio (0.9.13-1) experimental; urgency=low
 
