--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pulseaudio (0.9.14-2) UNRELEASED; urgency=low
+
+  * Build against libcap2-dev (Closes: #489060)
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Fri, 20 Feb 2009 23:21:26 +0000
+
 pulseaudio (0.9.14-1) experimental; urgency=low
 
   * New Upstream Version
