--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ pulseaudio (0.9.14-2) UNRELEASED; urgency=low
 
   * Build against libcap2-dev (Closes: #489060)
   * Bump shlibs of libpulse0 (Closes: #514645)
+  * Wait up to 5 seconds for pulseaudio to stop. Fix suggested by Aron Griffis
+    (Closes: #488754)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Fri, 20 Feb 2009 23:25:24 +0000
+ -- Sjoerd Simons <sjoerd@debian.org>  Fri, 20 Feb 2009 23:31:54 +0000
 
 pulseaudio (0.9.14-1) experimental; urgency=low
 
