--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ pulseaudio (0.9.14-2) UNRELEASED; urgency=low
   * Bump shlibs of libpulse0 (Closes: #514645)
   * Wait up to 5 seconds for pulseaudio to stop. Fix suggested by Aron Griffis
     (Closes: #488754)
+  * Don't put stop links in rc0 and rc6. Pulse doens't really need it. Patch
+    supplied by James Westby (Closes: #494959)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Fri, 20 Feb 2009 23:31:54 +0000
+ -- Sjoerd Simons <sjoerd@debian.org>  Fri, 20 Feb 2009 23:35:31 +0000
 
 pulseaudio (0.9.14-1) experimental; urgency=low
 
