--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,7 @@ pulseaudio (0.9.14-2) UNRELEASED; urgency=low
   * Build against libcap2-dev (Closes: #489060)
   * Bump shlibs of libpulse0 (Closes: #514645)
   * Wait up to 5 seconds for pulseaudio to stop. Fix suggested by Aron Griffis
-    (Closes: #488754)
+    (Closes: #488754, #498457)
   * Don't put stop links in rc0 and rc6. Pulse doens't really need it. Patch
     supplied by James Westby (Closes: #494959)
 
