--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,10 @@ pulseaudio (0.9.14-2) UNRELEASED; urgency=low
     (Closes: #488754, #498457)
   * Don't put stop links in rc0 and rc6. Pulse doens't really need it. Patch
     supplied by James Westby (Closes: #494959)
+  * Make the start option of the init script report the right status. Fix
+    suggested by Aron Griffis (Closes: #488752)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Fri, 20 Feb 2009 23:35:31 +0000
+ -- Sjoerd Simons <sjoerd@debian.org>  Fri, 20 Feb 2009 23:43:31 +0000
 
 pulseaudio (0.9.14-1) experimental; urgency=low
 
