--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ pulseaudio (0.9.14-2) UNRELEASED; urgency=low
 
   * Build against libcap2-dev (Closes: #489060)
   * Bump shlibs of libpulse0 (Closes: #514645)
+  * Bump soname of libpulsecore to 9
   * Wait up to 5 seconds for pulseaudio to stop. Fix suggested by Aron Griffis
     (Closes: #488754, #498457)
   * Don't put stop links in rc0 and rc6. Pulse doens't really need it. Patch
@@ -10,7 +11,7 @@ pulseaudio (0.9.14-2) UNRELEASED; urgency=low
     suggested by Aron Griffis (Closes: #488752)
   * Use per user esound sockets instead of a single one for all users
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sat, 21 Feb 2009 00:05:04 +0000
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 01 Mar 2009 10:22:45 +0000
 
 pulseaudio (0.9.14-1) experimental; urgency=low
 
