--- a/debian/changelog
+++ b/debian/changelog
@@ -23,8 +23,10 @@ pulseaudio (0.9.14-2) UNRELEASED; urgency=low
   [ Sjoerd Simons ]
   * debian/control: Don't build the bluetooth module on non-linux systems
     (Closes: #502837)
+  * debian/control: Make the bluetooth module conflict with older pulseaudio
+    versions
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 01 Mar 2009 12:02:01 +0000
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 01 Mar 2009 12:21:05 +0000
 
 pulseaudio (0.9.14-1) experimental; urgency=low
 
