--- a/debian/changelog
+++ b/debian/changelog
@@ -26,8 +26,9 @@ pulseaudio (0.9.14-2) UNRELEASED; urgency=low
   * debian/control: Make the bluetooth module conflict with older pulseaudio
     versions
   * Update standards version, no changes needed
+  * debian/copyright: Big update
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 01 Mar 2009 13:58:23 +0000
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 01 Mar 2009 15:53:27 +0000
 
 pulseaudio (0.9.14-1) experimental; urgency=low
 
