--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pulseaudio (0.9.14-2) UNRELEASED; urgency=low
+pulseaudio (0.9.14-2) unstable; urgency=low
 
   [ Sjoerd Simons ]
   * Build against libcap2-dev (Closes: #489060)
