--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ pulseaudio (0.9.15~test5-1) UNRELEASED; urgency=low
 
   * New Upstream Version
   * debian/copyright: Updated
+  * debian/control: Build-Depends on libltdl7-dev
+  * debian/control: Build-Depends on libasound2-dev (>= 1.0.19)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Thu, 05 Mar 2009 17:44:24 +0000
+ -- Sjoerd Simons <sjoerd@debian.org>  Thu, 05 Mar 2009 17:44:57 +0000
 
 pulseaudio (0.9.14-2) unstable; urgency=low
 
