debian/control: Add bulid-depends on libgtk2.0-dev and libxtst-dev

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,8 +13,9 @@ pulseaudio (0.9.15~test5-1) UNRELEASED; urgency=low
   * debian/pulseaudio-module-bluetooth.install: Add the bluetooth-util module
     library
   * debian/pulseaudio.install: Add new modules
+  * debian/control: Add bulid-depends on libgtk2.0-dev and libxtst-dev
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sat, 21 Mar 2009 13:26:47 +0000
+ -- Sjoerd Simons <sjoerd@debian.org>  Sat, 21 Mar 2009 14:10:12 +0000
 
 pulseaudio (0.9.14-2) unstable; urgency=low
 
