--- a/debian/changelog
+++ b/debian/changelog
@@ -15,8 +15,9 @@ pulseaudio (0.9.15~test5-1) UNRELEASED; urgency=low
   * debian/pulseaudio.install: Add new modules
   * debian/control: Add bulid-depends on libgtk2.0-dev and libxtst-dev
   * debian/pulseaudio.shlibs, debian/libpulse0.shlibs: Update shlib files
+  * debian/pulseaudio.install: Add liboss-util.so oss module helper library
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sat, 21 Mar 2009 15:24:44 +0000
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 22 Mar 2009 21:32:37 +0000
 
 pulseaudio (0.9.14-2) unstable; urgency=low
 
