--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pulseaudio (0.9.15~test5-1) UNRELEASED; urgency=low
+pulseaudio (0.9.15~test5-1) experimental; urgency=low
 
   * New Upstream Version
   * debian/copyright: Updated
@@ -18,7 +18,7 @@ pulseaudio (0.9.15~test5-1) UNRELEASED; urgency=low
   * debian/pulseaudio.install: Add liboss-util.so oss module helper library
   * debian/control, debian/pulseaudio-module-raop.install: Add RAOP module
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 22 Mar 2009 21:44:40 +0000
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 22 Mar 2009 23:06:50 +0000
 
 pulseaudio (0.9.14-2) unstable; urgency=low
 
