--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ pulseaudio (0.9.15-1) UNRELEASED; urgency=low
 
   * debian/control: Build-Depend on libcap-dev instead of libcap2-dev
   * New Upstream Version
+  * Update copyright file
 
- -- Sjoerd Simons <sjoerd@debian.org>  Wed, 15 Apr 2009 22:50:03 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Wed, 15 Apr 2009 23:14:20 +0100
 
 pulseaudio (0.9.15~test5-1) experimental; urgency=low
 
