Updated pulseaudio-module-hal.install, dbus-util became part of pulsecore

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ pulseaudio (0.9.15-1) UNRELEASED; urgency=low
   * debian/control: Build-Depend on libcap-dev instead of libcap2-dev
   * New Upstream Version
   * Update copyright file
+  * Updated pulseaudio-module-hal.install, dbus-util became part of pulsecore
 
- -- Sjoerd Simons <sjoerd@debian.org>  Wed, 15 Apr 2009 23:14:20 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Wed, 15 Apr 2009 23:29:58 +0100
 
 pulseaudio (0.9.15~test5-1) experimental; urgency=low
 
