--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ pulseaudio (0.9.15-1) UNRELEASED; urgency=low
   * Update copyright file
   * Updated pulseaudio-module-hal.install, dbus-util became part of pulsecore
   * Move debug package to the debug Section
+  * Done make shlibs files for modules in /usr/lib/pulse-0.9.15
 
- -- Sjoerd Simons <sjoerd@debian.org>  Wed, 15 Apr 2009 23:46:18 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Wed, 15 Apr 2009 23:50:11 +0100
 
 pulseaudio (0.9.15~test5-1) experimental; urgency=low
 
