Update standards-version to 3.8.1, no further changes

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ pulseaudio (0.9.15-1) UNRELEASED; urgency=low
   * Updated pulseaudio-module-hal.install, dbus-util became part of pulsecore
   * Move debug package to the debug Section
   * Done make shlibs files for modules in /usr/lib/pulse-0.9.15
+  * Update standards-version to 3.8.1, no further changes
 
- -- Sjoerd Simons <sjoerd@debian.org>  Wed, 15 Apr 2009 23:50:11 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Thu, 16 Apr 2009 00:05:25 +0100
 
 pulseaudio (0.9.15~test5-1) experimental; urgency=low
 
