--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-pulseaudio (0.9.15-2) UNRELEASED; urgency=low
+pulseaudio (0.9.15-2) unstable; urgency=low
 
   * debian/control: Add strict dependencies from libpulse-dev to the various
     libraries (Closes: #525759)
   * Add local shlib files to ensure the correct dependencies get generated
     (Closes: #528405)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Thu, 21 May 2009 00:13:44 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Thu, 21 May 2009 00:54:38 +0100
 
 pulseaudio (0.9.15-1) unstable; urgency=low
 
