--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 pulseaudio (0.9.15-3) UNRELEASED; urgency=low
 
-  * Re-enable bluetooth support
+  * Re-enable bluetooth support (Closes: #530514)
 
  -- Sjoerd Simons <sjoerd@debian.org>  Sat, 23 May 2009 13:42:44 +0100
 
