--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 pulseaudio (0.9.15-3) UNRELEASED; urgency=low
 
   * Re-enable bluetooth support (Closes: #530514)
+  * No longer recommend padevchooser and let paprefs be a suggest
+    (Closes: #530810)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sat, 23 May 2009 13:42:44 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 07 Jun 2009 20:21:15 +0100
 
 pulseaudio (0.9.15-2) unstable; urgency=low
 
