--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,11 @@ pulseaudio (0.9.15-3) UNRELEASED; urgency=low
   * Re-enable bluetooth support (Closes: #530514)
   * No longer recommend padevchooser and let paprefs be a suggest
     (Closes: #530810)
+  * 0001-alsa-allow-configuration-of-fallback-device-strings-.patch
+    - Added. Support alsa devices which only have the raw hw device, but no
+      front device even though they can do 2ch stereo (from upstream git)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 07 Jun 2009 20:21:15 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 07 Jun 2009 20:33:03 +0100
 
 pulseaudio (0.9.15-2) unstable; urgency=low
 
