--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,10 @@ pulseaudio (0.9.15-3) UNRELEASED; urgency=low
       front device even though they can do 2ch stereo (from upstream git)
   * Add support for the status action in the init script, patch by Peter
     Eisentraut (Closes: #527333)
+  * Change the libjack0.100.0-dev build-depend to libjack-dev as per request of
+    the debian multimedia maintainers (Closes: #527424)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 07 Jun 2009 20:44:36 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 07 Jun 2009 20:49:03 +0100
 
 pulseaudio (0.9.15-2) unstable; urgency=low
 
