--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pulseaudio (0.9.15-3) UNRELEASED; urgency=low
+pulseaudio (0.9.15-3) unstable; urgency=low
 
   * Re-enable bluetooth support (Closes: #530514)
   * No longer recommend padevchooser and let paprefs be a suggest
@@ -13,7 +13,7 @@ pulseaudio (0.9.15-3) UNRELEASED; urgency=low
   * Prevent the default.pa manpage from being installed as part of the pa
     locale (Closes: #508874)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 07 Jun 2009 21:57:25 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 07 Jun 2009 22:30:33 +0100
 
 pulseaudio (0.9.15-2) unstable; urgency=low
 
