--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pulseaudio (0.9.15-4.2) UNRELEASED; urgency=low
+
+  * Import NMU fix (Closes: #537351)
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 26 Jul 2009 15:02:57 +0200
+
 pulseaudio (0.9.15-4.1) unstable; urgency=high
 
   * Non-maintainer upload by the Security Team.
