--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-pulseaudio (0.9.15-4.2) UNRELEASED; urgency=low
+pulseaudio (0.9.16~test2~20090726git59659e1db-1) UNRELEASED; urgency=low
 
-  * Import NMU fix (Closes: #537351)
+  * New Upstream Version
+  * Ack NMU (Closes: #537351)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 26 Jul 2009 15:02:57 +0200
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 26 Jul 2009 16:48:45 +0200
 
 pulseaudio (0.9.15-4.1) unstable; urgency=high
 
