--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ pulseaudio (0.9.16~test2~20090726git59659e1db-1) UNRELEASED; urgency=low
 
   * New Upstream Version
   * Ack NMU (Closes: #537351)
+  * Remove all patches, everything was merged upstream :)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 26 Jul 2009 16:48:45 +0200
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 26 Jul 2009 17:03:28 +0200
 
 pulseaudio (0.9.15-4.1) unstable; urgency=high
 
