--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ pulseaudio (0.9.16~test2~20090726git59659e1db-1) UNRELEASED; urgency=low
   * Ack NMU (Closes: #537351)
   * Remove all patches, everything was merged upstream :)
   * debian/copyright: updated
+  * debian/pulseaudio.install: Don't install the PolicyKit config file
+  * debian/control: Removed build-dep on libpolkit-dbus-dev
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 26 Jul 2009 17:20:42 +0200
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 26 Jul 2009 17:28:33 +0200
 
 pulseaudio (0.9.15-4.1) unstable; urgency=high
 
