debian/pulseaudio.instal: Add module-intended-roles

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,9 @@ pulseaudio (0.9.16~test2~20090726git59659e1db-1) UNRELEASED; urgency=low
   * debian/control: Removed build-dep on libpolkit-dbus-dev
   * Update various shlibs files to use 0.9.16
   * debian/pulseaudio.install: Install pulseaudio shared config files
+  * debian/pulseaudio.instal: Add module-intended-roles
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 26 Jul 2009 18:39:25 +0200
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 26 Jul 2009 18:00:47 +0200
 
 pulseaudio (0.9.15-4.1) unstable; urgency=high
 
