--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,10 @@ pulseaudio (0.9.16~test2~20090726git59659e1db-1) UNRELEASED; urgency=low
   * Update various shlibs files to use 0.9.16
   * debian/pulseaudio.install: Install pulseaudio shared config files
   * debian/pulseaudio.instal: Add module-intended-roles
+  * debian/control: Make pulseaudio-module-raop-dbg depend on
+    pulseaudio-module-raop
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 26 Jul 2009 18:00:47 +0200
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 26 Jul 2009 18:01:31 +0200
 
 pulseaudio (0.9.15-4.1) unstable; urgency=high
 
