--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-pulseaudio (0.9.16~test4-1) UNRELEASED; urgency=low
+pulseaudio (0.9.16~test4-1) experimental; urgency=low
 
   * New Upstream Version
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 09 Aug 2009 17:36:39 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 09 Aug 2009 18:24:46 +0100
 
 pulseaudio (0.9.16~test2~20090726git59659e1db-1) experimental; urgency=low
 
