--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pulseaudio (0.9.16~test5-1) UNRELEASED; urgency=low
+
+  * New Upstream Version
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sat, 22 Aug 2009 14:56:48 +0100
+
 pulseaudio (0.9.16~test4-1) experimental; urgency=low
 
   * New Upstream Version
