--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ pulseaudio (0.9.16-1) UNRELEASED; urgency=low
 
   * New upstream release
   * debian/copyright: updated
+  * debian/control: Remove the liboil build-dep
 
- -- Sjoerd Simons <sjoerd@debian.org>  Thu, 10 Sep 2009 19:48:36 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Thu, 10 Sep 2009 19:49:03 +0100
 
 pulseaudio (0.9.16~test5-1) experimental; urgency=low
 
